--- a/orsys/mmd/j3/neural-networks/section.yml
+++ b/orsys/mmd/j3/neural-networks/section.yml
@@ -1,21 +1,21 @@
-title: Réseaux de Neurones
-includes:
-  - title: Réseaux de neurones récurrents
-    path: rnn
-  - title: Réseaux à longue mémoire de court terme
-    path: lstm
-  - title: Variantes de réseaux récurrents
-    path: rnn-variants
-  - title: RNN avec Keras
-    path: rnn-keras
-  - path: questions
-  #- title: "Travaux Pratiques : RNN"
-  #  path: tp-rnn
-
-  - title: Modèle à Attention
-    path: attention-model
-  - title: Transformer Networks
-    path: transformer
-  - path: questions
-  - title: "Travaux Pratiques : Transformer"
-    path: tp-transformer
+default_titles:
+  attention-model: "Mod\xE8le \xE0 Attention"
+  lstm: "R\xE9seaux \xE0 longue m\xE9moire de court terme"
+  rnn: "R\xE9seaux de neurones r\xE9currents"
+  rnn-keras: RNN avec Keras
+  rnn-variants: "Variantes de r\xE9seaux r\xE9currents"
+  tp-transformer: 'Travaux Pratiques : Transformer'
+  transformer: Transformer Networks
+flavors:
+  standard:
+  - rnn
+  - lstm
+  - rnn-variants
+  - rnn-keras
+  - questions
+  - attention-model
+  - transformer
+  - questions
+  - tp-transformer
+title: "R\xE9seaux de Neurones"
+version: 2
