--- a/orsys/new-mlb/j2/unsupervised/section.yml
+++ b/orsys/new-mlb/j2/unsupervised/section.yml
@@ -1,16 +1,19 @@
+version: 2
 title: Apprentissage non-supervisé
-includes:
-  - path: introduction
-    title: Introduction
-  - path: dimensionality-reduction
-    title: Réduction de la dimensionalité
-  - path: pca-lda
-    title: "Réduction de la dimensionalité : Projections linéaires"
-  - path: algorithme-em
-    title: Espérance-Maximisation
-  - path: kmeans-gaussian
-    title: K-Means
-  - path: anomaly-detection-light
-    title: Détection d'anomalies
-  - path: tp
-    title: Travaux Pratiques
+default_titles:
+  introduction: Introduction
+  dimensionality-reduction: Réduction de la dimensionalité
+  pca-lda: "Réduction de la dimensionalité : Projections linéaires"
+  algorithme-em: Espérance-Maximisation
+  kmeans-gaussian: K-Means
+  anomaly-detection-light: Détection d'anomalies
+  tp: Travaux Pratiques
+flavors:
+  standard:
+    - introduction
+    - dimensionality-reduction
+    - pca-lda
+    - algorithme-em
+    - kmeans-gaussian
+    - anomaly-detection-light
+    - tp
