--- a/orsys/new-mlb/j2/supervised/section.yml
+++ b/orsys/new-mlb/j2/supervised/section.yml
@@ -1,24 +1,27 @@
+version: 2
 title: Apprentissage supervisé
-includes:
-  - path: naive-bayes
-    title: Naive Bayes
-  - path: trees
-    title: Arbres de décision
-  - path: random-forest
-    title: Random Forest
-  - path: regression-lineaire
-    title: Regression Linéaire
-  - path: cost-error-function
-    title: Fonction de Coût/Erreur
-  - path: optimisation
-    title: Optimisation
-  - path: derivation-gradient
-    title: Gradient de l'erreur
-  - path: regression-logistique
-    title: Régression Logistique
-  - path: nn-intro
-    title: Réseau de Neurones
-  - path: svm
-    title: Support Vector Machine
-  - path: tp
-    title: Travaux Pratiques
+default_titles:
+  naive-bayes: Naive Bayes
+  trees: Arbres de décision
+  random-forest: Random Forest
+  regression-lineaire: Regression Linéaire
+  cost-error-function: Fonction de Coût/Erreur
+  optimisation: Optimisation
+  derivation-gradient: Gradient de l'erreur
+  regression-logistique: Régression Logistique
+  nn-intro: Réseau de Neurones
+  svm: Support Vector Machine
+  tp: Travaux Pratiques
+flavors:
+  standard:
+    - naive-bayes
+    - trees
+    - random-forest
+    - regression-lineaire
+    - cost-error-function
+    - optimisation
+    - derivation-gradient
+    - regression-logistique
+    - nn-intro
+    - svm
+    - tp
