--- a/orsys/new-mlb/j4/actors/section.yml
+++ b/orsys/new-mlb/j4/actors/section.yml
@@ -1,4 +1,7 @@
+default_titles:
+  gafa: Industriels
+flavors:
+  standard:
+  - gafa
 title: Acteurs du Machine Learning
-includes:
-  - path: gafa
-    title: Industriels
+version: 2
