--- a/orsys/mmd/j1/natural-language-processing/section.yml
+++ b/orsys/mmd/j1/natural-language-processing/section.yml
@@ -1,28 +1,28 @@
 default_titles:
   intro: Natural Language Processing (NLP)
-  pattern: "Manipulation d'Expressions R\xE9guli\xE8res"
-  preprocessing: "Pr\xE9traitements"
+  pattern: Manipulation d'Expressions Régulières
+  preprocessing: Prétraitements
   recommandation-text: Recommandation de Textes
-  similarity-text: "Similarit\xE9s de Textes"
+  similarity-text: Similarités de Textes
   tp-help: Quelques liens utiles
   tp-text-features-engineering: Travaux Pratique Text Mining
   tp-text-reco-system: Travaux Pratique Recommandation de Texte
-  tp-text-regex: "Travaux pratique Expressions R\xE9guli\xE8res"
+  tp-text-regex: Travaux pratique Expressions Régulières
   vectors: Vecteurs textuels
 flavors:
   standard:
-  - intro
-  - pattern
-  - questions
-  - tp-help
-  - tp-text-regex
-  - preprocessing
-  - vectors
-  - questions
-  - tp-text-features-engineering
-  - similarity-text
-  - recommandation-text
-  - questions
-  - tp-text-reco-system
+    - intro
+    - pattern
+    - questions
+    - tp-help
+    - tp-text-regex
+    - preprocessing
+    - vectors
+    - questions
+    - tp-text-features-engineering
+    - similarity-text
+    - recommandation-text
+    - questions
+    - tp-text-reco-system
 title: Le traitement du texte
 version: 2
