--- a/orsys/mmd/j2/supervised/section.yml
+++ b/orsys/mmd/j2/supervised/section.yml
@@ -1,40 +1,40 @@
 default_titles:
   classification: Classification
-  cost-error-function: "Fonction de Co\xFBt/Erreur"
-  demo-gradient-boosting: "D\xE9mo Sklearn"
-  demo-random-forest: "D\xE9mo Sklearn"
-  demo-svm: "D\xE9mo Sklearn"
+  cost-error-function: Fonction de Coût/Erreur
+  demo-gradient-boosting: Démo Sklearn
+  demo-random-forest: Démo Sklearn
+  demo-svm: Démo Sklearn
   derivation-gradient: Gradient de l'erreur
   gradient-boosting: Gradient Boosting
   naive-bayes: Naive Bayes
-  nn-intro: "R\xE9seau de Neurones"
+  nn-intro: Réseau de Neurones
   optimisation: Optimisation
   random-forest: Random Forest
-  regression-lineaire: "Regression Lin\xE9aire"
-  regression-logistique: "R\xE9gression Logistique"
+  regression-lineaire: Regression Linéaire
+  regression-logistique: Régression Logistique
   svm: Support Vector Machine
-  tp-svm-text: 'Travaux Pratiques : SVM'
-  trees: "Arbres de d\xE9cision"
+  tp-svm-text: "Travaux Pratiques : SVM"
+  trees: Arbres de décision
 flavors:
   standard:
-  - naive-bayes
-  - regression-lineaire
-  - cost-error-function
-  - optimisation
-  - derivation-gradient
-  - nn-intro
-  - classification
-  - regression-logistique
-  - questions
-  - trees
-  - random-forest
-  - questions
-  - demo-random-forest
-  - gradient-boosting
-  - questions
-  - demo-gradient-boosting
-  - svm
-  - demo-svm
-  - tp-svm-text
-title: "Apprentissage supervis\xE9"
+    - naive-bayes
+    - regression-lineaire
+    - cost-error-function
+    - optimisation
+    - derivation-gradient
+    - nn-intro
+    - classification
+    - regression-logistique
+    - questions
+    - trees
+    - random-forest
+    - questions
+    - demo-random-forest
+    - gradient-boosting
+    - questions
+    - demo-gradient-boosting
+    - svm
+    - demo-svm
+    - tp-svm-text
+title: Apprentissage supervisé
 version: 2
