--- a/orsys/new-mlb/j4/sectors/section.yml
+++ b/orsys/new-mlb/j4/sectors/section.yml
@@ -1,11 +1,11 @@
 default_titles:
   coding: Code
-  sante: "Sant\xE9"
-  tendencies-and-new-sectors: "Tendances et secteurs \xE9mergents"
+  sante: Santé
+  tendencies-and-new-sectors: Tendances et secteurs émergents
 flavors:
   standard:
-  - tendencies-and-new-sectors
-  - sante
-  - coding
-title: "Secteurs d'activit\xE9"
+    - tendencies-and-new-sectors
+    - sante
+    - coding
+title: Secteurs d'activité
 version: 2
