--- a/shared/latex/auto-encoders/section.yml
+++ b/shared/latex/auto-encoders/section.yml
@@ -1,9 +1,9 @@
 default_titles:
-  autoencoder: "Pr\xE9sentation"
+  autoencoder: Présentation
   tp: Travaux Pratiques
 flavors:
   standard:
-  - autoencoder
-  - tp
+    - autoencoder
+    - tp
 title: Auto-encodeurs
 version: 2
