--- a/shared/latex/cnn/section.yml
+++ b/shared/latex/cnn/section.yml
@@ -1,9 +1,9 @@
 default_titles:
-  data: "Des probl\xE9matiques vari\xE9es"
-  models: "Les r\xE9seaux de convolutions"
+  data: Des problématiques variées
+  models: Les réseaux de convolutions
 flavors:
   standard:
-  - data
-  - models
+    - data
+    - models
 title: Le traitement d'images
 version: 2
