--- a/shared/latex/neural-networks/section.yml
+++ b/shared/latex/neural-networks/section.yml
@@ -1,13 +1,13 @@
 default_titles:
-  cnn: "R\xE9seaux \xE0 convolutions"
+  cnn: Réseaux à convolutions
   intro: Introduction
-  tp-cnn: 'Travaux Pratiques : CNN et Keras'
-  tp-nn: 'Travaux Pratiques : Tensorflow et Keras'
+  tp-cnn: "Travaux Pratiques : CNN et Keras"
+  tp-nn: "Travaux Pratiques : Tensorflow et Keras"
 flavors:
   standard:
-  - intro
-  - cnn
-  - tp-nn
-  - tp-cnn
-title: "R\xE9seaux de neurones"
+    - intro
+    - cnn
+    - tp-nn
+    - tp-cnn
+title: Réseaux de neurones
 version: 2
