--- a/shared/latex/engineering/section.yml
+++ b/shared/latex/engineering/section.yml
@@ -1,9 +1,9 @@
 title: Ingénierie du Machine Learning
 default_titles:
-  engineering: Bonnes pratiques
+  engineering-practices: Bonnes pratiques
 flavors:
   all:
-    - engineering
+    - engineering-practices
   mlcraftmyass:
-    - engineering
+    - engineering-practices
 version: 2
