--- a/orsys/mmd/targets.yml
+++ b/orsys/mmd/targets.yml
@@ -32,7 +32,7 @@
 
     - title: Réseaux Réccurents
       path: neural-networks
-      flavor: recurrent-intro
+      flavor: recurrent-text
 
     - title: Transformer Network
       path: neural-networks
